[FIX] web: min width for many2many_tags
Before this commit, the width of the cells for many2many_tags was often
too small, so the tags were truncated. (e.g.: the tax_id column on the
sale order lines on the form view of the sale order)

After this commit, the column has a min-width of 150px

Task-id: 3581756
X-original-commit: 4c3fde5412dc525cd2c33820b2dcec88719d3cbc

--- a/addons/web/static/src/views/fields/many2many_tags/many2many_tags_field.scss
+++ b/addons/web/static/src/views/fields/many2many_tags/many2many_tags_field.scss
@@ -41,6 +41,10 @@
     }
 }
 
+.o_list_view .o_many2many_tags_cell {
+    min-width: 150px;
+}
+
 .o_list_view .o_field_widget.o_field_many2many_tags {
     .o_tags_input {
         border: 0;
